Fix multi-line H2s on mobile by setting line-height

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,9 +34,10 @@ h1 {
 }
 h2 {
   font-variant-caps: all-small-caps;
-  margin-bottom: -0.5em;
+  margin-bottom: -0.25em;
   font-size: 1.4em;
   margin-top: 1.2em;
+  line-height: 1;
 }
 
 h3 {
